// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`page component > render when signed in 1`] = `
<div>
  <p
    class="text-center"
  >
    Welcome, 
    Dawid
    !
  </p>
  <p
    class="text-center"
  >
    Use the navigation above to start your cooking journey.
  </p>
</div>
`;

exports[`page component > render when signed out 1`] = `
<div>
  <p
    class="text-center"
  >
    Manage recipes, rate dishes, plan diet, plan grocery shopping and more.
  </p>
  <p
    class="text-center"
  >
    Want to try it out? 
    <a
      href="/sign-in"
    >
      Sign in
    </a>
    .
  </p>
</div>
`;
